<resources>
    <!--String placeholders-->
    <string name="city_country">%s, %s</string>
    <string name="deg">%.0f\u00b0</string>
    <string name="percentage">%.0f%%</string>
    <string name="hpa">%.0f hPa</string>
    <string name="forecast_day">%s, %02d:00</string>
    <string name="m_s">%.2f m/s</string>
    <string name="result_query">Showing results for: %s</string>
    <string name="error">Error: %s</string>
    <!---->

    <!--Keys-->
    <string name="city_extra">CITY</string>
    <string name="video_extra">VIDEO</string>
    <string name="API_KEY">AIzaSyB9VzwWZybSeB1Wmt32pTJWfk96H-McLUs</string>
    <!---->

    <string name="app_name">WeatherApp</string>
    <string name="search_hint">London, GB</string>
    <string name="search">Search</string>
    <string name="weather_icon">Weather icon</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="city_not_found">Error, city not found</string>
    <string name="show_5_days_forecast">Show 5 days forecast</string>
    <string name="no_city">No city provided</string>
    <string name="wind">Wind</string>
    <string name="show_weather_video">Show weather video</string>
    <string name="no_data_provided">Error, no data provided</string>
    <string name="welcome_to_weatherapp">Welcome to WeatherApp</string>
    <string name="use_search_to_find_your_city_s_weather_data">Use search to find your city\'s weather data</string>
    <string name="no_connection">No connection</string>
    <string name="check_conn">Check your connection and try again</string>
    <string name="ok">OK</string>
</resources>
